force-app/main/default/objects/Case/fields/AccountManagerManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManagerManager__c</fullName>
    <formula>IF(
   AND(
       NOT(ISBLANK(Account.Id)),
       NOT(ISBLANK(Account.OwnerId)),
       NOT(ISBLANK(Account.Owner.ManagerId))
   ),
   Account.Owner.Manager.Id,
   &quot;&quot;
)</formula>
    <label>Account Manager&apos;s Manager</label>
    <type>Text</type>
</CustomField>