force-app/main/default/objects/Case/fields/Amendment_waiting_for_customer_signature__c.field-meta.xml
<CustomField>
    <fullName>Amendment_waiting_for_customer_signature__c</fullName>
    <label>Amendment waiting for customer signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>