force-app/main/default/objects/Case/fields/Customer_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order__c</fullName>
    <label>Customer Purchase Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>