force-app/main/default/objects/Case/fields/First_Date_Time_Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Time_Case_Closed__c</fullName>
    <label>First Date/Time Case Closed</label>
    <type>DateTime</type>
</CustomField>