force-app/main/default/objects/Case/fields/GLPA_Apellidos__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Apellidos__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Apellidos</label>
    <length>50</length>
    <type>Text</type>
</CustomField>