force-app/main/default/objects/Case/fields/GLPA_Centro_Poblado2__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Centro_Poblado2__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Centro Poblado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto El Roque</fullName>
            </value>
            <value>
                <fullName>Bayóvar</fullName>
            </value>
            <value>
                <fullName>Belizario</fullName>
            </value>
            <value>
                <fullName>Chullachy</fullName>
            </value>
            <value>
                <fullName>Chusis</fullName>
            </value>
            <value>
                <fullName>Cirilo</fullName>
            </value>
            <value>
                <fullName>Ciudad del Pescador</fullName>
            </value>
            <value>
                <fullName>Constante</fullName>
            </value>
            <value>
                <fullName>El Barco</fullName>
            </value>
            <value>
                <fullName>El Calabazo</fullName>
            </value>
            <value>
                <fullName>El Porvenir</fullName>
            </value>
            <value>
                <fullName>El Sauce</fullName>
            </value>
            <value>
                <fullName>El Venado</fullName>
            </value>
            <value>
                <fullName>Garita García</fullName>
            </value>
            <value>
                <fullName>Hacienda Bazán</fullName>
            </value>
            <value>
                <fullName>La Bocana</fullName>
            </value>
            <value>
                <fullName>La Claridad</fullName>
            </value>
            <value>
                <fullName>La Coscola</fullName>
            </value>
            <value>
                <fullName>La Esperanza</fullName>
            </value>
            <value>
                <fullName>La Florida</fullName>
            </value>
            <value>
                <fullName>La Maceta</fullName>
            </value>
            <value>
                <fullName>La Mina</fullName>
            </value>
            <value>
                <fullName>La Trampa</fullName>
            </value>
            <value>
                <fullName>Las Capillas</fullName>
            </value>
            <value>
                <fullName>Los Pocitos</fullName>
            </value>
            <value>
                <fullName>Mata Caballo</fullName>
            </value>
            <value>
                <fullName>Micaela Bastidas</fullName>
            </value>
            <value>
                <fullName>Mina Abandonada</fullName>
            </value>
            <value>
                <fullName>Mina de Sal Zapayal</fullName>
            </value>
            <value>
                <fullName>Minchales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>