force-app/main/default/objects/Case/fields/GLPA_Centro_Poblado__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Centro_Poblado__c</fullName>
    <label>Centro Poblado</label>
    <length>25</length>
    <type>Text</type>
</CustomField>