force-app/main/default/objects/Case/fields/GLPA_Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Correo_electronico__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Correo electronico</label>
    <type>Email</type>
</CustomField>