force-app/main/default/objects/Case/fields/GLPA_Datos_del_destinatario_dirigido_a__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Datos_del_destinatario_dirigido_a__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Área a la que diriges tu consulta​</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
                <label>Comercial (Consultas sobre venta comercial de fosfato)</label>
            </value>
            <value>
                <fullName>Comunicación</fullName>
                <label>Comunicación (Información sobre la empresa, material informativo, etc.)</label>
            </value>
            <value>
                <fullName>Gestión Social</fullName>
                <label>Gestión Social (solicitudes de apoyo, auspicios, reclamos, etc.)</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <label>Legal (Notificaciones judiciales, de organismos estatales o policiales, etc.)</label>
            </value>
            <value>
                <fullName>Puerto</fullName>
                <label>Puerto (consultas y solicitudes de acceso al terminal portuario y barco)</label>
            </value>
            <value>
                <fullName>Recursos Humanos</fullName>
                <label>Recursos Humanos (Consultas sobre temas laborales, postulaciones, cartas judiciales, etc.)</label>
            </value>
            <value>
                <fullName>Suministros</fullName>
                <label>Suministros (Información de empresas que desean dar a conocer sus servicios)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>