force-app/main/default/objects/Case/fields/GLPA_Datos_del_documento__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Datos_del_documento__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Datos del documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Carta</fullName>
            </value>
            <value>
                <fullName>Certificado</fullName>
            </value>
            <value>
                <fullName>Informe</fullName>
            </value>
            <value>
                <fullName>Notificacion</fullName>
            </value>
            <value>
                <fullName>Oficio</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Requerimiento</fullName>
            </value>
            <value>
                <fullName>Resolucion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>