force-app/main/default/objects/Case/fields/GLPA_Datos_del_remitente_enviado_por__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Datos_del_remitente_enviado_por__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Datos del remitente (enviado por)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>