force-app/main/default/objects/Case/fields/GLPA_Direccion__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Direccion__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Direccion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>