force-app/main/default/objects/Case/fields/GLPA_Distrito__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Distrito__c</fullName>
    <label>Distrito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bellavista</fullName>
            </value>
            <value>
                <fullName>Bernal</fullName>
            </value>
            <value>
                <fullName>Cristo Nos Valga</fullName>
            </value>
            <value>
                <fullName>La Union</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Rinconada</fullName>
            </value>
            <value>
                <fullName>Sechura</fullName>
            </value>
            <value>
                <fullName>Vice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>