force-app/main/default/objects/Case/fields/GLPA_Institucion__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Institucion__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Institucion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>