force-app/main/default/objects/Case/fields/GLPA_Lugar_de_procedencia__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Lugar_de_procedencia__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Lugar de procedencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>