force-app/main/default/objects/Case/fields/GLPA_Numero_de_telefono__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Numero_de_telefono__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Numero de telefono</label>
    <type>Phone</type>
</CustomField>