force-app/main/default/objects/Case/fields/GLPA_Si_tienes_una_consulta_ingr_sala__c.field-meta.xml
<CustomField>
    <fullName>GLPA_Si_tienes_una_consulta_ingr_sala__c</fullName>
    <description>GLPA-1017 - Necessary to fulfill the business needs of the Miski Mayo in case creation and case management.</description>
    <label>Si tienes una consulta, ingrésala en el</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>