force-app/main/default/objects/Case/fields/Issue_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Issue_Sub_Reason__c</fullName>
    <label>Issue Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_SS_IssueReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adulteration / Cargo Theft</fullName>
            </value>
            <value>
                <fullName>Blend Material Creation</fullName>
            </value>
            <value>
                <fullName>Blend Material Extension</fullName>
            </value>
            <value>
                <fullName>Blocks</fullName>
            </value>
            <value>
                <fullName>Booked Sales Block</fullName>
            </value>
            <value>
                <fullName>Caking from Humidity</fullName>
            </value>
            <value>
                <fullName>Chemical Additive</fullName>
            </value>
            <value>
                <fullName>Chemical Deficiency</fullName>
            </value>
            <value>
                <fullName>Coarse</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Contamination</fullName>
            </value>
            <value>
                <fullName>Damaged Cargo</fullName>
            </value>
            <value>
                <fullName>Delivery Delay</fullName>
            </value>
            <value>
                <fullName>Dust</fullName>
            </value>
            <value>
                <fullName>Granulometric Uniformity</fullName>
            </value>
            <value>
                <fullName>Humidity</fullName>
            </value>
            <value>
                <fullName>Impurity</fullName>
            </value>
            <value>
                <fullName>Incorrect Documentation</fullName>
            </value>
            <value>
                <fullName>Incorrect Product</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Packing</fullName>
            </value>
            <value>
                <fullName>Product Label Discrepancy</fullName>
            </value>
            <value>
                <fullName>Product Spillage on Truck</fullName>
            </value>
            <value>
                <fullName>Replan</fullName>
            </value>
            <value>
                <fullName>Stay Extension Fee</fullName>
            </value>
            <value>
                <fullName>Stones</fullName>
            </value>
            <value>
                <fullName>Straight Material Creation</fullName>
            </value>
            <value>
                <fullName>Straight Material Extension</fullName>
            </value>
            <value>
                <fullName>Transport Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>