force-app/main/default/objects/Case/fields/Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Manager_Id__c</fullName>
    <formula>$User.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Id</label>
    <type>Text</type>
</CustomField>