force-app/main/default/objects/Case/fields/Number_of_Contracts_Served__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contracts_Served__c</fullName>
    <label>Number of Contracts Served</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>