force-app/main/default/objects/Case/fields/OrderProductName__c.field-meta.xml
<CustomField>
    <fullName>OrderProductName__c</fullName>
    <formula>PMC_SS_OrderProduct__r.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product Name</label>
    <type>Text</type>
</CustomField>