force-app/main/default/objects/Case/fields/OrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>OrderQuantity__c</fullName>
    <label>Order Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>