force-app/main/default/objects/Case/fields/PMC_CPQ_ListOfPlantsAndComponents__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ListOfPlantsAndComponents__c</fullName>
    <label>List Of Plants And Components</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>