force-app/main/default/objects/Case/fields/PMC_CPQ_MasterProduct__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MasterProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MasterProduct</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Approval Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>