force-app/main/default/objects/Case/fields/PMC_SS_24HourNotice__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_24HourNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Potash cases only.  Toggle box checked if quality case is reportable and a 24-Hour Notice has been issued to Mosaic Production Facility Operations.  A copy of the 24-Hour Notice should be attached to the quality case as an uploaded file under the Related tab</description>
    <label>24 Hour Notice</label>
    <type>Checkbox</type>
</CustomField>