force-app/main/default/objects/Case/fields/PMC_SS_AccessorialCostDetail__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccessorialCostDetail__c</fullName>
    <label>Accessorial Costs Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Rental</fullName>
            </value>
            <value>
                <fullName>Insurance Costs</fullName>
            </value>
            <value>
                <fullName>Legal Costs</fullName>
            </value>
            <value>
                <fullName>Samples Shipped</fullName>
            </value>
            <value>
                <fullName>Transportation Costs/Labor</fullName>
            </value>
            <value>
                <fullName>Travel Expenses</fullName>
            </value>
            <value>
                <fullName>Warehouse Cost/Labor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>