force-app/main/default/objects/Case/fields/PMC_SS_AccessorialLevel1Costs__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccessorialLevel1Costs__c</fullName>
    <inlineHelpText>To total the Accessorial Cost on Parent Quality and Non-Quality</inlineHelpText>
    <label>Accessorial Level 1 Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>