force-app/main/default/objects/Case/fields/PMC_SS_AccessorialLevel3Costs__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccessorialLevel3Costs__c</fullName>
    <label>Accessorial Level 3 Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>