force-app/main/default/objects/Case/fields/PMC_SS_Account_Owner_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Account_Owner_Sales_Office__c</fullName>
    <formula>TEXT(Account.Owner.PMC_CPQ_SalesOffice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Sales Office</label>
    <type>Text</type>
</CustomField>