force-app/main/default/objects/Case/fields/PMC_SS_AccountManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates Account manager of Account Team</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>