force-app/main/default/objects/Case/fields/PMC_SS_AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountOwner__c</fullName>
    <formula>Account.OwnerId</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>