force-app/main/default/objects/Case/fields/PMC_SS_AccountType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountType__c</fullName>
    <formula>TEXT( Account.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>