force-app/main/default/objects/Case/fields/PMC_SS_ActionPlanforResolution__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ActionPlanforResolution__c</fullName>
    <label>Action Plan for Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>