force-app/main/default/objects/Case/fields/PMC_SS_ActionReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ActionReason__c</fullName>
    <label>Action Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Rebill</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Reverse Shipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>