force-app/main/default/objects/Case/fields/PMC_SS_ActionsToResolve__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ActionsToResolve__c</fullName>
    <label>Actions To Resolve</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancel/Rebill</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Diversion</fullName>
            </value>
            <value>
                <fullName>No Quality Action Required</fullName>
            </value>
            <value>
                <fullName>Quality Mitigation Performed</fullName>
            </value>
            <value>
                <fullName>Reconsignment</fullName>
            </value>
            <value>
                <fullName>Reship</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>