force-app/main/default/objects/Case/fields/PMC_SS_AffectedPartofLoad__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AffectedPartofLoad__c</fullName>
    <description>Text field (255) to record comments, if applicable. Ex: Vessel hold #4</description>
    <label>Affected Part of Load</label>
    <type>TextArea</type>
</CustomField>