force-app/main/default/objects/Case/fields/PMC_SS_ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ApprovalStatus__c</fullName>
    <description>To indicate the approval status of the case</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>Final Approved</fullName>
            </value>
            <value>
                <fullName>Level 1 Approved</fullName>
            </value>
            <value>
                <fullName>Level 2 Approved</fullName>
            </value>
            <value>
                <fullName>Level 3 Approved</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>