force-app/main/default/objects/Case/fields/PMC_SS_ArticleType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ArticleType__c</fullName>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Technical Bulletin/Notice</fullName>
            </value>
            <value>
                <fullName>Training Document</fullName>
            </value>
            <value>
                <fullName>Transition Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>