force-app/main/default/objects/Case/fields/PMC_SS_AssistCustomer__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AssistCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle box checked if Customer or Account Manager has requested Quality Assurance / other Mosaic assistance at the customer facility.</description>
    <label>Assist Customer</label>
    <type>Checkbox</type>
</CustomField>