force-app/main/default/objects/Case/fields/PMC_SS_BadOrder__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_BadOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Rail shipping case is a Bad Order</description>
    <label>Bad Order</label>
    <type>Checkbox</type>
</CustomField>