force-app/main/default/objects/Case/fields/PMC_SS_Business__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Business__c</fullName>
    <description>Business line of Customer</description>
    <label>Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>