force-app/main/default/objects/Case/fields/PMC_SS_CaseRecord__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CaseRecord__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;   Id ,  CaseNumber )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record</label>
    <type>Text</type>
</CustomField>