force-app/main/default/objects/Case/fields/PMC_SS_CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CaseStatus__c</fullName>
    <formula>CASE( Status , &apos;New&apos;, &apos;Open&apos;, &apos;Working&apos;, &apos;In Progress&apos;,&apos;Pending&apos;, &apos;In Progress&apos;,&apos;Escalated&apos;,&apos;In Progress&apos;,&apos;Re-Open&apos;,&apos;In Progress&apos;,&apos;Rejected&apos;,&apos;Closed&apos;,&apos;Closed&apos;,&apos;Closed&apos;,&apos;Closure Pending&apos;,&apos;Closed&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>