force-app/main/default/objects/Case/fields/PMC_SS_ClaimPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ClaimPaymentAmount__c</fullName>
    <description>This field will be used to store the claim Payment Amount used in RoC documents.</description>
    <label>Claim Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>