force-app/main/default/objects/Case/fields/PMC_SS_ClientDenied__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ClientDenied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Details if Client is on Client Denied List</description>
    <label>Client Denied</label>
    <type>Checkbox</type>
</CustomField>