force-app/main/default/objects/Case/fields/PMC_SS_ContactInformationOnSite_c__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ContactInformationOnSite_c__c</fullName>
    <description>Field displayed when Issue Reason selected is &apos;Equipment Failure&apos; to enter the Contact Information to arrange repairs of equipment.</description>
    <label>Contact Information On-site</label>
    <type>TextArea</type>
</CustomField>