force-app/main/default/objects/Case/fields/PMC_SS_Contract__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cases (Contract)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>